force-app/main/default/objects/Contact/fields/Facture_devis_1__c.field-meta.xml
<CustomField>
    <fullName>Facture_devis_1__c</fullName>
    <label>Facture devis 1</label>
    <type>Url</type>
</CustomField>