force-app/main/default/objects/Contact/fields/Facture_devis_2__c.field-meta.xml
<CustomField>
    <fullName>Facture_devis_2__c</fullName>
    <label>Facture devis 2</label>
    <type>Url</type>
</CustomField>