force-app/main/default/objects/Contact/fields/Formulaire__c.field-meta.xml
<CustomField>
    <fullName>Formulaire__c</fullName>
    <description>Pour savoir si la demande faite sur le web concerne les services PEP&apos;S ou ADE.</description>
    <label>Formulaire</label>
    <length>80</length>
    <type>Text</type>
</CustomField>