force-app/main/default/objects/Contact/fields/HubspotEmailing__c.field-meta.xml
<CustomField>
    <fullName>HubspotEmailing__c</fullName>
    <label>Hubspot emailing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>