force-app/main/default/objects/Contact/fields/Responsable_legal__c.field-meta.xml
<CustomField>
    <fullName>Responsable_legal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Responsable légal</label>
    <type>Checkbox</type>
</CustomField>