force-app/main/default/objects/Contact/fields/Societe_owner__c.field-meta.xml
<CustomField>
    <fullName>Societe_owner__c</fullName>
    <description>Ce champ sert à cibler les sociétés des propriétaires des contacts signataire pour Account Engagement</description>
    <label>Société du owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>