force-app/main/default/objects/Contact/fields/TECH_AccountLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>TECH_AccountLastModifiedDate__c</fullName>
    <formula>Account.LastModifiedDate</formula>
    <label>TECH_AccountLastModifiedDate</label>
    <type>Date</type>
</CustomField>