force-app/main/default/objects/Contact/fields/TECH_IsSignataire__c.field-meta.xml
<CustomField>
    <fullName>TECH_IsSignataire__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sert pour le marketing ciblé sur le signataire du compte</description>
    <label>TECH_IsSignataire</label>
    <type>Checkbox</type>
</CustomField>