force-app/main/default/objects/Contact/fields/URL_de_la_page_d_origine__c.field-meta.xml
<CustomField>
    <fullName>URL_de_la_page_d_origine__c</fullName>
    <description>Copie de celui sur Account</description>
    <label>URL de la page d&apos;origine</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>