force-app/main/default/objects/Contact/recordTypes/Contact_Recordtype.recordType-meta.xml
<RecordType>
    <fullName>Contact_Recordtype</fullName>
    <active>true</active>
    <label>Contact-Recordtype</label>
</RecordType>