force-app/main/default/objects/Contact/validationRules/FirstNameRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>FirstNameRequired</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(ISBLANK(FirstName ),ISBLANK(TEXT(Salutation) )),
  ISPICKVAL($User.UserType, &apos;PowerPartner&apos;) 
)</errorConditionFormula>
    <errorMessage>Le Prénom et la Civilité sont obligatoires.</errorMessage>
</ValidationRule>