force-app/main/default/objects/Contact/validationRules/VR_001.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_001</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(MobilePhone)),
    NOT(
        OR(
            BEGINS(MobilePhone, &quot;06&quot;),
            BEGINS(MobilePhone, &quot;07&quot;)
        )
    )
)</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>Le numéro de mobile doit commencer par 06 ou 07.</errorMessage>
</ValidationRule>